feat: provided basic kubernetes setup